--- a/CodeGenUtility/src/main/resources/static/html/requestFormHadoop.html
+++ b/CodeGenUtility/src/main/resources/static/html/requestFormHadoop.html
@@ -1,13 +1,11 @@
-<!-- 
 <div ng-show="loadingBackgronud" class="loadingBackgronud"></div>
 <div ng-show="dataLoading" class="dataLoading" id="loading-indicator">
 	<img src="img/loader.gif" width="100" height="150">
 </div>
 <div class="container-fluid">
-	<div class="innerContainer" ng-init="pageLoadData()">
-	
+	<div class="innerContainer" ng-init="pageLoadHadoopData()">
 		<div class="innerContainer2">
-			<form role="form" name="rdbmsForm">
+			<form role="form" name="hadoopForm">
 				<div id="sourceType">
 					<div class="row titleDiv">
 						<div class="col-md-12 titleDesc">
@@ -18,111 +16,133 @@
 					</div>
 					<div class="row dbConnection">
 						<div class="col-md-3">
-							<label class="labelSubHeader" style="padding-top: 0">HOST
-								NAME PORT</label> <select class="customDropDown" id="fileType1"
-								ng-change="" name="fileType1" ng-required="" ng-model="">
-								<option selected="selected" value="">Please Select</option>
-								<option ng-repeat="src in fileType1">{{src.value}}</option>
-							</select>
-							<div ng-show="showValidationErrors">
-								<div style="line-height: 3px">&nbsp;</div>
-								<span class="errmsg" ng-show="fileForm.fileType1.$error.required">This
-									is required. </span>
-							</div>
-						</div>
-						<div class="col-md-3">
 							<label class="labelSubHeader" style="padding-top: 0">SOURCE
-								TYPE</label> <input type="text" class="customTextBox" id="srctype"
-								placeholder="Please Enter">
+								TYPE</label> <input readonly="readonly" type="text"
+								class="customTextBox" ng-model="hadoop.sourceType">
 						</div>
 						<div class="col-md-3">
 							<label class="labelSubHeader" style="padding-top: 0">FILE
-								PATH</label> <input type="text" class="customTextBox" id="filepath"
-								placeholder="Please Enter">
+								TYPE</label> <select class="customDropDown" id="fileTypeHdp"
+								name="fileTypeHdp" required ng-change="changeFileType()"
+								ng-model="hadoop.fileType">
+								<option selected="selected" value="">Please Select</option>
+								<option ng-repeat="src in fileTypeHadoop">{{src.value}}</option>
+							</select>
+							<div ng-show="showValidationErrors">
+								<div style="line-height: 3px">&nbsp;</div>
+								<span class="errmsg"
+									ng-show="hadoopForm.fileTypeHdp.$error.required">This is
+									required. </span>
+							</div>
 						</div>
 						<div class="col-md-3">
-							<label class="labelSubHeader" style="padding-top: 0">FILE
-								SCHEMA PATH</label> <input type="text" class="customTextBox"
-								id="fileschemapath" placeholder="Please Enter">
+							<label class="labelSubHeader" style="padding-top: 0">Hadoop
+								Source Connection</label> <select class="customDropDown"
+								id="hadoopSrcConnection" name="hadoopSrcConnection" required
+								ng-model="hadoop.SFTPserverIp">
+								<option selected="selected" value="">Please Select</option>
+								<option ng-repeat="src in SFTPserverIPListHadoop ">{{src.value}}</option>
+							</select>
+							<div ng-show="showValidationErrors">
+								<div style="line-height: 3px">&nbsp;</div>
+								<span class="errmsg"
+									ng-show="hadoopForm.hadoopSrcConnection.$error.required">This
+									is required. </span>
+							</div>
 						</div>
-					</div>
 
-					<div class="row">
-						<div class="col-md-3">
-							<label class="labelSubHeader">FILE TYPE</label> <select
-								class="customDropDown" id="fileType2" ng-change=""
-								name="fileType2" ng-required="fileTypeRequired"
-								ng-model="file.fileType2">
-								<option selected="selected" value="">Please Select</option>
-								<option ng-repeat="src in fileType2">{{src.value}}</option>
-							</select>
-							<div ng-show="showValidationErrors">
-								<div style="line-height: 3px">&nbsp;</div>
-								<span class="errmsg" ng-show="fileForm.fileType2.$error.required">This
-									is required. </span>
+					</div>
+					<div id="disabledDiv">
+						<div class="row">
+							<div class="col-md-3">
+								<label class="labelSubHeader">FILE PATH</label> <input
+									type="text" class="customTextBox" id="filepath" name="filepath"
+									required ng-model="hadoop.filePath" placeholder="Please Enter">
+								<div ng-show="showValidationErrors">
+									<div style="line-height: 3px">&nbsp;</div>
+									<span class="errmsg"
+										ng-show="hadoopForm.filepath.$error.required">This is
+										required. </span>
+								</div>
+							</div>
+							<div class="col-md-3">
+								<label class="labelSubHeader">FILE SCHEMA PATH</label> <input
+									type="text" class="customTextBox" required
+									ng-model="hadoop.fileSchemaPath" id="fileschemapath"
+									name="fileschemapath" placeholder="Please Enter">
+								<div ng-show="showValidationErrors">
+									<div style="line-height: 3px">&nbsp;</div>
+									<span class="errmsg"
+										ng-show="hadoopForm.fileschemapath.$error.required">This
+										is required. </span>
+								</div>
+							</div>
+							<div class="col-md-3">
+								<label ng-class="fileDelimeter ? 'disabledlabel' : 'labelSubHeader'">FILE DELIMITER<span
+									class="pull-right glyphicon glyphicon-info-sign rightHoverHelp"
+									data-toggle="tooltip" title="comma(,) , Semicolon(;), Pipe(|)"></span>
+								</label> 
+								<input
+									type="text" ng-class="fileDelimeter ? 'disabledTextBox' : 'customTextBox'"
+									id="filedel" maxlength="1"
+									name="filedelimeter" ng-required=fileDelimeterRequired
+									ng-disabled="fileDelimeter" ng-model="hadoop.fileDelimeter"
+									placeholder="Please Enter">
+
+								<div ng-show="showValidationErrors">
+									<div style="line-height: 3px">&nbsp;</div>
+									<span class="errmsg"
+										ng-show="hadoopForm.filedelimeter.$error.required">This
+										is required. </span>
+								</div>
 							</div>
 						</div>
-						<div class="col-md-3">
-							<label class="labelSubHeader">FILE DELIMITER</label> <input
-								type="text" class="customTextBox" id="filedel" name="filedel"
-								ng-required="fileDelimeterRequired" ng-readonly="fileDelimeter"
-								ng-model="file.fileDelimeter" placeholder="Please Enter">
-							<div ng-show="showValidationErrors">
-								<div style="line-height: 3px">&nbsp;</div>
-								<span class="errmsg" ng-show="fileForm.filedel.$error.required">This
-									is required. </span>
+						<div class="row" style="padding-bottom: 24px;">
+							<div class="col-md-3">
+								<label ng-class="rowtagDisable ? 'disabledlabel' : 'labelSubHeader'">ROW TAG</label> 
+								<input type="text"
+									ng-class="rowtagDisable ? 'disabledTextBox' : 'customTextBox'" id="rowtag" name="rowtag"
+									ng-disabled="rowtagDisable" ng-required="rowTagRequired"
+									ng-model="hadoop.rowTag" placeholder="Please Enter">
+								<div ng-show="showValidationErrors">
+									<div style="line-height: 3px">&nbsp;</div>
+									<span class="errmsg"
+										ng-show="hadoopForm.rowtag.$error.required">This is
+										required. </span>
+								</div>
 							</div>
-						</div>
-						<div class="col-md-3">
-							<label class="labelSubHeader">ROW TAG</label> <input type="text"
-								class="customTextBox" id="rowtag" name="rowtag"
-								ng-required="rowTagRequired" ng-readonly="rowTag"
-								ng-model="file.rowTag" placeholder="Please Enter">
-							<div ng-show="showValidationErrors">
-								<div style="line-height: 3px">&nbsp;</div>
-								<span class="errmsg" ng-show="fileForm.rowtag.$error.required">This
-									is required. </span>
+							<div class="col-md-3">
+								<label ng-class="joinKeys  ? 'disabledlabel' : 'labelSubHeader'">UNIQUE
+									KEY</label> <input type="text" name="joinkey" required
+									ng-class="joinKeys ? 'disabledTextBox' : 'customTextBox'"
+									id="joinkey" ng-model="hadoop.joinKeys"
+									placeholder="Please Enter">
+								<div ng-show="showValidationErrors">
+									<div style="line-height: 3px">&nbsp;</div>
+									<span class="errmsg"
+										ng-show="hadoopForm.joinkey.$error.required">This is
+										required. </span>
+								</div>
 							</div>
-						</div>
-						<div class="col-md-3">
-							<label class="labelSubHeader">DB NAME</label> <input type="text"
-								class="customTextBox" id="srccol" placeholder="Please Enter">
+							<div class="col-md-3">
+								<label
+									ng-class="archivePeriod  ? 'disabledlabel' : 'labelSubHeader'">ARCHIEVE
+									KEY (DAYS)</label> <input type="text" ng-pattern-restrict="^[0-9]*$"
+									name="archiveperiod" required id="archive"
+									ng-class="archivePeriod ? 'disabledTextBox' : 'customTextBox'"
+									placeholder="Please Enter" ng-model="hadoop.archivePeriod">
+								<div ng-show="showValidationErrors">
+									<div style="line-height: 3px">&nbsp;</div>
+									<span class="errmsg"
+										ng-show="hadoopForm.archiveperiod.$error.required">This
+										is required. </span>
+								</div>
+							</div>
 						</div>
 					</div>
-					<div class="row" style="padding-bottom: 24px;">
-						<div class="col-md-3">
-							<label class="labelSubHeader">TABLES</label> <select
-								name="tables" id="srctable" multiple class="customDropDown"
-								ng-model="codeGenRequest.sourceTableNames">
-								<option selected="selected" value="">Please Select</option>
-								<option ng-selected="isSelectedFlag" ng-repeat="src in tables"
-									ng-click="getCols(codeGenRequest.username,codeGenRequest.password,codeGenRequest.dbConnection,codeGenRequest.dbName,codeGenRequest.sourceType,codeGenRequest.sourceTableNames,codeGenRequest.source) ; disableDrop(codeGenRequest.sourceTableNames);onSelcted2(codeGenRequest.sourceTableNames);getHiveTableNames(codeGenRequest.sourceTableNames)"
-									ng-class="{warning: (codeGenRequest.sourceTableNames == 'Select All'), ok: (codeGenRequest.sourceTableNames != 'Select All')}">{{src}}</option>
-							</select>
-						</div>
-						<div class="col-md-3">
-							<label class="labelSubHeader">COLUMNS</label> <select
-								name="colums" ng-required="colRequiredchk=='false'"
-								ng-disabled="disabledMultiple" class="customDropDown"
-								id="srcclumn" multiple
-								ng-model="codeGenRequest.sourceColumnNames"
-								ng-click="onSelctedColumns(codeGenRequest.sourceColumnNames)">
-								<option selected="selected" value="">Please Select</option>
-								<option ng-repeat="src in cols">{{src}}</option>
-							</select>
-						</div>
-						<div class="col-md-3">
-							<label class="labelSubHeader">CALCULATE DELTA ON</label> <input
-								type="text" class="customTextBox" id="CalculateDelta"
-								placeholder="Please Enter ">
-						</div>
-					</div>
-					disabled div ends
+					<!-- disabled div ends -->
 				</div>
-				sourceType div ends
-
-
-				Common for all sections
+				<!-- sourceType div ends -->
 				<div id="targetType" class="myRadioBtns">
 					<div class="row titleDiv">
 						<div class="col-md-12 titleDesc">
@@ -133,94 +153,84 @@
 					</div>
 					<div class="row dbConnection">
 						<div class="col-md-3">
-							<label class="labelSubHeader" style="padding-top: 0">TARGET
-								TYPE</label>
-							<div>
-								<input id="HIVE" type="radio" class="btnRadio" name="HIVE"
-									ng-model="codeGenRequest.targetType" ng-value="'HIVE'"
-									ng-change="showHiveBlk(codeGenRequest.targetType)"><label
-									class="sourcelocationLabel">HDFS &amp; HIVE </label> <input
-									id="HDFS" type="radio" class="btnRadio" name="HDFS"
-									ng-model="codeGenRequest.targetType" value="HDFS"
-									ng-value="'HDFS'"
-									ng-change="showHiveBlk(codeGenRequest.targetType)"><label
-									class="sourcelocationLabel">HDFS Only</label>
-							</div>
-						</div>
-						<div class="col-md-3">
 							<label class="labelSubHeader" style="padding-top: 0">LOAD
 								TYPE</label> <select class="customDropDown" id="loadtype"
-								ng-model="codeGenRequest.loadType">
-								<option selected="selected" value="">Please Select</option>
-								<option name="loadtype"
-									ng-selected="{{src.value == codeGenRequest.loadType}}"
-									ng-repeat="src in loadType">{{src.value}}</option>
+								ng-model="hadoop.loadType">
+								<option value="">Please Select</option>
+								<option name="loadtype" ng-repeat="src in loadType">{{src.value}}</option>
 							</select>
 						</div>
 						<div class="col-md-3">
 							<label class="labelSubHeader" style="padding-top: 0">TARGET
-								CONNECTION</label> <input type="text" placeholder="Please Enter"
-								class="customTextBox" name="targetconn"
-								ng-required="requiredHive=='false'" id="Target"
-								ng-model="codeGenRequest.targetConnection" required>
+								CONNECTION</label> <select class="customDropDown" id="targetconn"
+								required name="targetconn" ng-model="hadoop.targetConnection">
+								<option selected="selected" value="">Please Select</option>
+								<option ng-repeat="src in targetcon">{{src.value}}</option>
+							</select>
+
+							<div ng-show="showValidationErrors">
+								<div style="line-height: 3px">&nbsp;</div>
+								<span class="errmsg"
+									ng-show="hadoopForm.targetconn.$error.required">This is
+									required. </span>
+							</div>
+
+						</div>
+						<div class="col-md-3">
+							<label class="labelSubHeader" style="padding-top: 0">HIVE
+								DB NAME</label> <input type="text" name="hivedbname"
+								placeholder="Please Enter" class="customTextBox" id="hivedb"
+								required ng-model="hadoop.targetDBName" ng-disabled="disabled">
+							<div ng-show="showValidationErrors">
+								<div style="line-height: 3px">&nbsp;</div>
+								<span class="errmsg"
+									ng-show="hadoopForm.hivedbname.$error.required">This is
+									required. </span>
+							</div>
 						</div>
 					</div>
-
 					<div class="row">
 						<div class="col-md-3">
-							<label class="labelSubHeader">HIVE DB NAME</label> <input
-								type="text" name="hivedbname" placeholder="Please Enter"
-								class="customTextBox" id="hivedb"
-								ng-required="colRequiredchk=='false'"
-								ng-model="codeGenRequest.targetDBName" ng-disabled="disabled">
-						</div>
-						<div class="col-md-3">
 							<label class="labelSubHeader">HIVE TABLE TYPE</label> <select
-								name="hivetabltt" ng-required="colRequiredchk=='false'"
-								class="customDropDown" id="hivetabletype"
-								ng-init="loadHiveTableType()"
-								ng-model="codeGenRequest.hiveTableType"
-								ng-change="changePartitinKey(codeGenRequest.hiveTableType)"
-								ng-disabled="disabled">
+								name="hivetabltt" class="customDropDown" id="hivetabletype"
+								ng-model="hadoop.hiveTableType"
+								ng-change="onChangeTableType(hadoop.hiveTableType)">
 								<option selected="selected" value="">Please Select</option>
 								<option ng-repeat="src in hiveTableType">{{src.value}}</option>
 							</select>
 						</div>
-					</div>
-					<div class="row">
 						<div class="col-md-3">
 							<label class="labelSubHeader">HIVE TABLE NAME</label> <input
-								type="text" name="hivetable"
-								ng-required="colRequiredchk=='false'" placeholder="Please Enter"
-								class="customTextBox" id="hivetable" value=""
-								ng-model="codeGenRequest.targetTableName"
-								ng-disabled="hivetabledisabled" required>
+								type="text" name="hivetableName" required
+								placeholder="Please Enter" class="customTextBox" id="hivetable"
+								value="" ng-model="hadoop.targetTableName">
+							<div ng-show="showValidationErrors">
+								<div style="line-height: 3px">&nbsp;</div>
+								<span class="errmsg"
+									ng-show="hadoopForm.hivetableName.$error.required">This
+									is required. </span>
+							</div>
 						</div>
 						<div class="col-md-3">
-							<label class="labelSubHeader">HIVE PARTITION KEY</label> <select
-								class="customDropDown" ng-required="colRequiredchk=='false'"
-								id="hivepartionkey" ng-model="codeGenRequest.targetPartitionKey"
-								ng-disabled="isdisabled">
-								<option selected="selected" value="">Please Select</option>
-								<option ng-repeat="field in codeGenRequest.sourceColumnNames "
-									value="{{field}}">{{field}}</option>
-							</select>
-										<input type="text"  name="hivetable" ng-required="colRequiredchk=='false'" placeholder="Please Enter" class="customTextBox" id="hivetable"  value="" ng-model="rdbms.targetTableName" ng-disabled="hivetabledisabled" required>
-			
+							<label class="labelSubHeader">HIVE PARTITION KEY</label> <input
+								type="text" name="hivetable" placeholder="Please Enter"
+								class="customTextBox" id="hivepartitionKey"
+								ng-model="hadoop.targetPartitionKey"
+								ng-disabled="hivePartitionKeyDisable">
+
 						</div>
 					</div>
-
 				</div>
-				sourceType div ends
+				<!-- sourceType div ends -->
 				<div class="row" style="padding-left: 68.3%;">
 					<button type="button" class="btn targetButton"
-						ng-click="onCancel();">Cancel</button>
+						ng-click="onCancelOfHadoop();">Cancel</button>
 					<span style="padding-right: 2%;"></span>
 					<button type="button" class="btn btn-primary myButton"
-						ng-click="postdata(codeGenRequest);">Create New Request</button>
+						ng-click="createHadoopCodeGenRequest(hadoop)">Create New
+						Request</button>
 				</div>
-
 			</form>
 		</div>
 	</div>
-</div> -->
+</div>
