--- a/CodeGenUtility/src/main/resources/static/index.html
+++ b/CodeGenUtility/src/main/resources/static/index.html
@@ -22,19 +22,25 @@
 <script src="js/app.js"></script>
 <script src="js/ng-pattern-restrict.js"></script>
 <script src="js/angular-route.js"></script>
+<script src="js/angular-cookies.min.js"></script>
 <script src="js/route.js"></script>
 <script src="lib/dirPagination.js"></script>
 <script src="js/config.js"></script>
 <script src="js/ui-bootstrap-tpls-2.5.0.js"></script>
+<script src="js/services/resource-service.js"></script>
+<script src="js/controllers/file-controller.js"></script>
+<script src="js/controllers/rdbms-controller.js"></script>
+<script src="js/controllers/hadoop-controller.js"></script>
+
 
 </head>
-<body ng-controller="utilityCtrl" class="myMainBody">
+<body  class="myMainBody">
 	<div class="flex-container">
 		<header>
 			<h4 class="headerMain"><img class="img-circle" src="img/geLogo.png" id="logo-ge"><span style="padding-left: 6px;color: #94a3ac;">Data Ingestion</span></h4>
 		</header>
 
-		<nav class="navbar navbar-default navbar-fixed-side nav">
+		<nav class="navbar navbar-default navbar-fixed-side nav" ng-show="isAuthenticated">
 			<center>
 			<ul>
 				<li style="padding-top: 28%;height: 56px;">
@@ -60,6 +66,54 @@
 
 		<div class="article">
 		<!-- <div class="outerContainer" style="padding-bottom:0"> apply for align-->
+			<div class="articleContainer" ng-show="isAuthenticated">
+				<div class="row">
+					<div class="col-md-5">
+						<left>
+						<div class="titleLeftUp">Data Code Generation Utility</div>
+						<div class="titleLeftDown">GE Healthcare</div>
+						</left>
+					</div>
+					<div class="col-md-7">
+						<div class="titleCenterMiddle"></div>
+						<!-- Data Ingestion</div> -->
+					</div>
+				</div>
+			</div>
+			<div class="container-fluid outerContainer">
+				<div class="innerContainer1" ng-show="isAuthenticated">
+					<div class="row titleDiv">
+						<div class="col-md-12 titleDesc">
+							SOURCE LOCATION
+							<div style="padding-bottom: 24px"></div>
+							<div class="stroke"></div>
+						</div>
+					</div>
+					<div class="row myRadioBtns">
+						<div class="col-md-3 ">
+							<input class="btnRadio" type="radio" ng-model="homeRadioBtn" ng-change="redirectToPage(homeRadioBtn)"
+								value="RDBMS"><label class="sourcelocationLabel">
+								RDBMS </label>
+						</div>
+						<div class="col-md-3 ">
+							<input class="btnRadio" type="radio" ng-model="homeRadioBtn" ng-change="redirectToPage(homeRadioBtn)"
+								value="Hadoop"> <label class="sourcelocationLabel">
+								Hadoop</label>
+						</div>
+						<div class="col-md-3">
+							<input class="btnRadio" type="radio" ng-model="homeRadioBtn" ng-change="redirectToPage(homeRadioBtn)"
+								value="Files"> <label class="sourcelocationLabel">
+								Files</label>
+						</div>
+						<div class="col-md-3">
+							<input class="btnRadio" type="radio" ng-model="homeRadioBtn" ng-change="redirectToPage(homeRadioBtn)"
+								value="S3"><label class="sourcelocationLabel">
+								S3</label>
+						</div>
+					</div>
+				</div>
+
+			</div>
 			<div ng-view></div>
 		</div>
 	</div>
@@ -74,6 +128,4 @@
 		</div>
 	</footer>
 </body>
-</body>
-
 </html>
