--- a/CodeGenUtility/src/main/resources/static/html/requestFormRDBMS.html
+++ b/CodeGenUtility/src/main/resources/static/html/requestFormRDBMS.html
@@ -3,7 +3,7 @@
 	<img src="img/loader.gif" width="100" height="150">
 </div>
 <div class="container-fluid">
-	<div class="innerContainer" ng-init="pageLoadDataRDMS()">
+	<div class="innerContainer" ng-init="pageLoadDataRDBMS()">
 	
 		<div class="innerContainer2">
 			<form role="form" name="codeGenRequest.rdbmsForm" novalidate>
