--- a/CodeGenUtility/src/main/resources/static/index.html
+++ b/CodeGenUtility/src/main/resources/static/index.html
@@ -38,7 +38,7 @@
 	<div class="flex-container">
 		<header>
 			<h4 class="headerMain"><img class="img-circle" src="img/geLogo.png" id="logo-ge"><span style="padding-left: 6px;color: #94a3ac;">Data Ingestion</span></h4>
-			<div class="pull-right"><a ng-click="logout()">Log Out</a></div>
+			<div class="pull-right"><a href="" ng-click="logout()">Log Out</a></div>
 		</header>
 
 		<nav class="navbar navbar-default navbar-fixed-side nav" ng-show="isAuthenticated">
