--- a/CodeGenUtility/src/main/resources/static/index.html
+++ b/CodeGenUtility/src/main/resources/static/index.html
@@ -35,7 +35,7 @@
 
 </head>
 <body  class="myMainBody">
-	<div class="flex-container">
+	<div ng-class="isAuthenticated ? 'flex-container' : 'classLoginScreenFlex'">
 		<header>
 			<h4 class="headerMain"><img class="img-circle" src="img/geLogo.png" id="logo-ge"><span style="padding-left: 6px;color: #94a3ac;">Data Ingestion</span>
 				<span ng-show="isAuthenticated"><small><a href="" ng-click="logout()" id="logoutButton">Log Out</a></small></span>
