--- a/CodeGenUtility/src/main/resources/static/html/errorpopupconnect.html
+++ b/CodeGenUtility/src/main/resources/static/html/errorpopupconnect.html
@@ -1,13 +1,9 @@
-
 <div class="modal-header">
-<h3 class="modal-title"></h3>
+	<h3 class="modal-title"></h3>
 </div>
-<div class="modal-body">
-
-Database connection is failed.Try again!!
-</div>
+<div class="modal-body">Database connection is failed.Please enter
+	valid details and Try again.</div>
 <div class="modal-footer">
-    <button class="btn btn-warning" type="button"
-ng-click="close()">Ok</button>
+	<button class="btn btn-warning" type="button" ng-click="close()">Ok</button>
 
 </div>
