--- a/CodeGenUtility/src/main/resources/static/html/requestForm.html
+++ b/CodeGenUtility/src/main/resources/static/html/requestForm.html
@@ -7,7 +7,7 @@
 	<div class="innerContainer" ng-init="pageLoadDataFile()">
 
 		<div class="innerContainer2">
-			<form role="form" name="file.fileForm" novalidate>
+			<form role="form" name="fileForm" novalidate>
 				<div id="sourceType">
 					<div class="row titleDiv">
 						<div class="col-md-12 titleDesc">
@@ -27,7 +27,7 @@
 							<div ng-show="showValidationErrors">
 								<div style="line-height: 3px">&nbsp;</div>
 								<span class="errmsg"
-									ng-show="file.fileForm.datasrc.$error.required">This is
+									ng-show="fileForm.datasrc.$error.required">This is
 									required. </span>
 							</div>
 						</div>
@@ -43,7 +43,7 @@
 							<div ng-show="showValidationErrors">
 								<div style="line-height: 3px">&nbsp;</div>
 								<span class="errmsg"
-									ng-show="file.fileForm.fileType.$error.required">This is
+									ng-show="fileForm.fileType.$error.required">This is
 									required. </span>
 							</div>
 						</div>
@@ -60,7 +60,7 @@
 							<!-- <div ng-show="showValidationErrors">
 									<div style="line-height: 3px">&nbsp;</div>
 									<span class="errmsg"
-										ng-show="file.fileForm.serverIP.$error.required">This is
+										ng-show="fileForm.serverIP.$error.required">This is
 										required. </span>
 								</div> -->
 						</div>
@@ -81,7 +81,7 @@
 							<div ng-show="showValidationErrors">
 								<div style="line-height: 3px">&nbsp;</div>
 								<span class="errmsg"
-									ng-show="file.fileForm.filedel.$error.required">This is
+									ng-show="fileForm.filedel.$error.required">This is
 									required. </span>
 							</div>
 						</div>
@@ -94,7 +94,7 @@
 							<div ng-show="showValidationErrors">
 								<div style="line-height: 3px">&nbsp;</div>
 								<span class="errmsg"
-									ng-show="file.fileForm.filepath.$error.required">This is
+									ng-show="fileForm.filepath.$error.required">This is
 									required. </span>
 							</div>
 						</div>
@@ -109,7 +109,7 @@
 							<div ng-show="showValidationErrors">
 								<div style="line-height: 3px">&nbsp;</div>
 								<span class="errmsg"
-									ng-show="file.fileForm.fileschpath.$error.required">This
+									ng-show="fileForm.fileschpath.$error.required">This
 									is required. </span>
 							</div>
 						</div>
@@ -127,7 +127,7 @@
 							<div ng-show="showValidationErrors">
 								<div style="line-height: 3px">&nbsp;</div>
 								<span class="errmsg"
-									ng-show="file.fileForm.joinkey.$error.required">This is
+									ng-show="fileForm.joinkey.$error.required">This is
 									required. </span>
 							</div>
 						</div>
@@ -141,7 +141,7 @@
 							<div ng-show="showValidationErrors">
 								<div style="line-height: 3px">&nbsp;</div>
 								<span class="errmsg"
-									ng-show="file.fileForm.rowtag.$error.required">This is
+									ng-show="fileForm.rowtag.$error.required">This is
 									required. </span>
 							</div>
 						</div>
@@ -158,7 +158,7 @@
 							<div ng-show="showValidationErrors">
 								<div style="line-height: 3px">&nbsp;</div>
 								<span class="errmsg"
-									ng-show="file.fileForm.archiveper.$error.required">This
+									ng-show="fileForm.archiveper.$error.required">This
 									is required. </span>
 							</div>
 						</div>
@@ -190,7 +190,7 @@
 							<div ng-show="showValidationErrors">
 								<div style="line-height: 3px">&nbsp;</div>
 								<span class="errmsg"
-									ng-show="file.fileForm.loadtype.$error.required">This is
+									ng-show="fileForm.loadtype.$error.required">This is
 									required. </span>
 							</div>
 						</div>
@@ -207,7 +207,7 @@
 							<div ng-show="showValidationErrors">
 								<div style="line-height: 3px">&nbsp;</div>
 								<span class="errmsg"
-									ng-show="file.fileForm.targetconn.$error.required">This
+									ng-show="fileForm.targetconn.$error.required">This
 									is required. </span>
 							</div>
 						</div>
@@ -219,7 +219,7 @@
 							<div ng-show="showValidationErrors">
 								<div style="line-height: 3px">&nbsp;</div>
 								<span class="errmsg"
-									ng-show="file.fileForm.hivedbname.$error.required">This
+									ng-show="fileForm.hivedbname.$error.required">This
 									is required. </span>
 							</div>
 						</div>
@@ -235,7 +235,7 @@
 							<div ng-show="showValidationErrors">
 								<div style="line-height: 3px">&nbsp;</div>
 								<span class="errmsg"
-									ng-show="file.fileForm.hivetable.$error.required">This
+									ng-show="fileForm.hivetable.$error.required">This
 									is required. </span>
 							</div>
 						</div>
@@ -252,7 +252,7 @@
 							<div ng-show="showValidationErrors">
 								<div style="line-height: 3px">&nbsp;</div>
 								<span class="errmsg"
-									ng-show="file.fileForm.hivetabletype.$error.required">This
+									ng-show="fileForm.hivetabletype.$error.required">This
 									is required. </span>
 							</div>
 						</div>
@@ -269,7 +269,7 @@
 							<div ng-show="showValidationErrors">
 								<div style="line-height: 3px">&nbsp;</div>
 								<span class="errmsg"
-									ng-show="file.fileForm.hivepartionkey.$error.required">This
+									ng-show="fileForm.hivepartionkey.$error.required">This
 									is required. </span>
 							</div>
 
